# simple-net

./: .gitignore  README.md  benchmark.py  pyproject.toml
models/: 0cd32548-f205-11eb-a7dc-7c04d0d54c7a  14d06eb2-f300-11eb-86a7-7c04d0d54c7a  524cdfd4-f227-11eb-ae71-7c04d0d54c7a
simple_net/: __init__.py  simple_net.py
tests/: test_simple_net.py
