[tool.poetry]
name = "simple-net"
version = "0.1.0"
description = ""
authors = ["d-e-h-i-o <niklas.dehio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
